--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 ; DEFAULT settings
 ; TOUCH AT YOUR OWN RISK
 
-default_do_method = 'get'
-object_ident_url = 'object'
-action_ident_url = 'action'
-identi_ident_url = 'id';
+method = 'get'
+object = 'object'
+action = 'action'
+identi = 'id';
 
-app_base_dir = __DIR__
-app_plugin_dir = __DIR__ . DIRECTORY_SEPARATOR . "plugins"
+base_dir = __DIR__
+plugin_dir = __DIR__ . DIRECTORY_SEPARATOR . "plugins"
 
 ; USER settings
 ; Change if you want, but don't touch
@@ -16,4 +16,4 @@ app_plugin_dir = __DIR__ . DIRECTORY_SEPARATOR . "plugins"
 ;
 ; Also, it's probably a good thing to do the following
 ; (instead of loading the user settings from here)
-; extra_conf_files[] = BASE . "put_file_here"
+; extra_conf[] = BASE . "put_file_here"
