--- a/config.ini
+++ b/config.ini
@@ -17,3 +17,5 @@ plugin_dir = __DIR__ . DIRECTORY_SEPARATOR . "plugins"
 ; Also, it's probably a good thing to do the following
 ; (instead of loading the user settings from here)
 ; extra_conf[] = BASE . "put_file_here"
+
+plugins[] = logger
