--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ action = 'action'
 identi = 'id';
 
 base_dir = __DIR__
-plugin_dir = __DIR__ . DIRECTORY_SEPARATOR . "plugins"
+plugin_dir = "plugins"
 
 ; USER settings
 ; Change if you want, but don't touch
