Added further functionality of MESSAGES.

--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,9 @@ identi = 'id';
 
 base_dir = __DIR__
 plugin_dir = "plugins"
+logdir = "logs"
+log = "logs"
+stdout = "stdout"
 
 ; USER settings
 ; Change if you want, but don't touch
