Added checks for configuration options in CONFIGURATION

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ identi = 'id';
 base_dir = __DIR__
 plugin_dir = "plugins"
 logdir = "logs"
-log = "logs"
+log = "stderror"
 stdout = "stdout"
 
 ; USER settings
