--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ identi = 'id';
 base_dir = __DIR__
 plugin_dir = "plugins"
 logdir = "logs"
-stdout = "stdout"
+stdout = "stdout.log"
 
 ; USER settings
 ; Change if you want, but don't touch
