Added public and private plugins

--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ stdout = "stdout.log"
 ;
 ; Also, it's probably a good thing to do the following
 ; (instead of loading the user settings from here)
-; extra_conf[] = BASE . "put_file_here"
+; extra_conf[] = "put_file_here"
 
 plugins[] = logger
 plugins[] = test
