--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,12 @@ stdout = "stdout.log"
 ; (instead of loading the user settings from here)
 ; extra_conf[] = "put_file_here"
 
+; Don't include this if you don't want logs to be generated
 plugins[] = logger
-plugins[] = test
+
+; This is the default 404-handler.
+; Whenever a 404 is encountered, the message "error_404" (or, MESSAGES::ERROR_404)
+; is sent through the pipe. Listen on that if you want custom error-handling.
 plugins[] = _404
+
+plugins[] = test
