--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,7 @@ object = 'object'
 action = 'action'
 identi = 'id';
 
+base_url = "http://apps.k2c.se/misc/crm_message_pattern/"
 base_dir = __DIR__
 plugin_dir = "plugins"
 logdir = "logs"
