--- a/config.ini
+++ b/config.ini
@@ -29,4 +29,8 @@ plugins[] = logger
 ; is sent through the pipe. Listen on that if you want custom error-handling.
 plugins[] = _404
 
+; This is the default index-handler
+; Whenever an empty action is encountered, the message "index" (or, MESSAGES:INDEX)
+; is sent through the pipe. Listen on that if you want custom index-handling.
+plugins[] = index
 plugins[] = test
