--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,9 @@
 ; TOUCH AT YOUR OWN RISK
 
 method = 'get'
-object = 'object'
-action = 'action'
-identi = 'id';
+object = 'o'
+action = 'a'
+identi = 'i';
 
 base_url = "http://apps.k2c.se/misc/crm_message_pattern/"
 base_dir = __DIR__
