Moved some constant/final classes

--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,7 @@ stdout = "stdout.log"
 ; extra_conf[] = "put_file_here"
 
 ; Don't include this if you don't want logs to be generated
-plugins[0] = logger
+plugins[] = logger
 
 ; This is the default 404-handler.
 ; Whenever a 404 is encountered, the message "error_404" (or, MESSAGES::ERROR_404)
