Removed some debug symbols

--- a/config.ini
+++ b/config.ini
@@ -27,7 +27,7 @@ plugins[] = logger
 ; This is the default 404-handler.
 ; Whenever a 404 is encountered, the message "error_404" (or, MESSAGES::ERROR_404)
 ; is sent through the pipe. Listen on that if you want custom error-handling.
-plugins[] = _404
+plugins[] = error_404
 
 ; This is the default index-handler
 ; Whenever an empty action is encountered, the message "index" (or, MESSAGES:INDEX)
