Fixed 404 in main loop

--- a/config.ini
+++ b/config.ini
@@ -34,3 +34,5 @@ plugins[] = error_404
 ; is sent through the pipe. Listen on that if you want custom index-handling.
 plugins[] = index
 plugins[] = test
+plugins[] = dep_test0
+plugins[] = dep_test1
