Fixed 404 in main loop

--- a/config.ini
+++ b/config.ini
@@ -21,12 +21,15 @@ stdout = "stdout.log"
 ; (instead of loading the user settings from here)
 ; extra_conf[] = "put_file_here"
 
-; Don't include this if you don't want logs to be generated
+; Comment out this if you don't want logs to be generated
 plugins[] = logger
 
 ; This is the default 404-handler.
 ; Whenever a 404 is encountered, the message "error_404" (or, MESSAGES::ERROR_404)
 ; is sent through the pipe. Listen on that if you want custom error-handling.
+;
+; NOTE: If no plugin is configured to handle this message an infinite loop will commense and 
+; subsequently a 500 will be thrown to the end user. 
 plugins[] = error_404
 
 ; This is the default index-handler
