Fixed 404 in main loop

--- a/config.ini
+++ b/config.ini
@@ -29,13 +29,15 @@ plugins[] = logger
 ; is sent through the pipe. Listen on that if you want custom error-handling.
 ;
 ; NOTE: If no plugin is configured to handle this message an infinite loop will commense and 
-; subsequently a 500 will be thrown to the end user. 
+; subsequently a http_500 will be thrown to the end user. 
 plugins[] = error_404
 
 ; This is the default index-handler
 ; Whenever an empty action is encountered, the message "index" (or, MESSAGES:INDEX)
 ; is sent through the pipe. Listen on that if you want custom index-handling.
 plugins[] = index
+
+; Debug
 plugins[] = test
 plugins[] = dep_test0
 plugins[] = dep_test1
