Fuckload of stuff. Above all: added MSSQLFactory as replacement for buggy PDO

--- a/config.ini
+++ b/config.ini
@@ -12,29 +12,20 @@ plugin_dir = "plugins"
 logdir = "logs"
 stdout = "stdout.log"
 
+; AUTH settings
+
+DB 		= "crm";
+DB_HOST = "k2csql01";
+DB_USER = "sa";
+DB_PASS = "L3ftH4nd";
+DB_PORT = "";
+
 ; USER settings
-; Change if you want, but don't touch
-; if you don't know what you do 
-; and/or it's a production site
-;
-; Also, it's probably a good thing to do the following
-; (instead of loading the user settings from here)
 ; extra_conf[] = "put_file_here"
 
-; Comment out this if you don't want logs to be generated
-plugins[] = logger
-
-; This is the default 404-handler.
-; Whenever a 404 is encountered, the message "error_404" (or, MESSAGES::ERROR_404)
-; is sent through the pipe. Listen on that if you want custom error-handling.
-;
-; NOTE: If no plugin is configured to handle this message an infinite loop will commense and 
-; subsequently a http_500 will be thrown to the end user. 
+; PLUGINS
+plugins[] = logger 
 plugins[] = error_404
-
-; This is the default index-handler
-; Whenever an empty action is encountered, the message "index" (or, MESSAGES:INDEX)
-; is sent through the pipe. Listen on that if you want custom index-handling.
 plugins[] = index
 
 ; Debug
