Changed handling of null values in config

--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ DB 		= "crm";
 DB_HOST = "k2csql01";
 DB_USER = "sa";
 DB_PASS = "L3ftH4nd";
-DB_PORT = "";
+DB_PORT = "none";
 
 ; USER settings
 ; extra_conf[] = "put_file_here"
