Added extra configuration options

--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,23 @@
-; DEFAULT settings
-; TOUCH AT YOUR OWN RISK
+; ; ; ; ; ; ; ; ; ; ;
+; IMPORTANT
+; Actions (URL) IMPORTANT
 
 method = 'get'
 action = 'a'
 object = 'o'
 identi = 'i';
 
+; ; ; ; ; ; ; ; ; ; ;
+; Misc IMPORTANT
+
+DBClassPrefix = "DB";
 base_url = "http://apps.k2c.se/misc/crm_message_pattern/"
 base_dir = __DIR__
 plugin_dir = "plugins"
 logdir = "logs"
 stdout = "stdout.log"
 
+; ; ; ; ; ; ; ; ; ; ;
 ; AUTH settings
 
 DB 		= "crm";
@@ -20,14 +26,20 @@ DB_USER = "sa";
 DB_PASS = "L3ftH4nd";
 DB_PORT = "none";
 
+; ; ; ; ; ; ; ; ; ; ;
 ; USER settings
 ; extra_conf[] = "put_file_here"
 
+; ; ; ; ; ; ; ; ; ; ;
 ; PLUGINS
-plugins[] = logger 
+; DO NOT REMOVE:
+; logger
+; error_404
+plugins[] = logger
 plugins[] = error_404
 plugins[] = index
 
+; ; ; ; ; ; ; ; ; ; ;
 ; Debug
 plugins[] = test
 plugins[] = dep_test0
