Changed logger to use 'a' instead of 'w'

--- a/config.ini
+++ b/config.ini
@@ -43,5 +43,5 @@ plugins[] = index
 ; Debug
 plugins[] = test
 plugins[] = dep_test0
-plugins[] = dep_test1
+; plugins[] = dep_test1
 plugins[] = sql_dbcustomer_test
