--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,7 @@ identi = 'i';
 ; Misc IMPORTANT
 
 DBClassPrefix = "DB";
+db_max_results = 5
 base_url = "http://apps.k2c.se/misc/crm_message_pattern/"
 base_dir = __DIR__
 plugin_dir = "plugins"
@@ -32,11 +33,12 @@ DB_PORT = "none";
 
 ; ; ; ; ; ; ; ; ; ; ;
 ; PLUGINS
-; DO NOT REMOVE:
-; logger
-; error_404
 plugins[] = logger
+
+; !IMPORTANT
 plugins[] = error_404
+; IMPORTANT!
+
 plugins[] = index
 
 ; ; ; ; ; ; ; ; ; ; ;
@@ -44,4 +46,4 @@ plugins[] = index
 plugins[] = sql_dbcustomer_test
 plugins[] = test
 plugins[] = dep_test0
-; plugins[] = dep_test1
+plugins[] = dep_test1
