--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ identi = 'i';
 ; ; ; ; ; ; ; ; ; ; ;
 ; Misc IMPORTANT
 
-DBClassPrefix = "DB";
+dbclassprefix = "DB";
 db_max_results = 5
 base_url = "http://apps.k2c.se/misc/crm_message_pattern/"
 base_dir = __DIR__
