--- a/config.ini
+++ b/config.ini
@@ -43,7 +43,7 @@ plugins[] = index
 
 ; ; ; ; ; ; ; ; ; ; ;
 ; Debug
-plugins[] = sql_dbcustomer_test
+plugins[] = sql_test.php
 plugins[] = test
 plugins[] = dep_test0
 plugins[] = dep_test1
