Started adding automatic loading of GlobalParams matching dbobject

--- a/config.ini
+++ b/config.ini
@@ -43,7 +43,7 @@ plugins[] = index
 
 ; ; ; ; ; ; ; ; ; ; ;
 ; Debug
-plugins[] = sql_test.php
+plugins[] = sql_test
 plugins[] = test
 plugins[] = dep_test0
 plugins[] = dep_test1
