--- a/config.ini
+++ b/config.ini
@@ -28,6 +28,15 @@ DB_PASS = "L3ftH4nd";
 DB_PORT = "none";
 
 ; ; ; ; ; ; ; ; ; ; ;
+; available db classes
+; ; remember to create
+; ; corresponding tables
+; ; for each.
+tables[] = customer
+tables[] = cases
+
+
+; ; ; ; ; ; ; ; ; ; ;
 ; USER settings
 ; extra_conf[] = "put_file_here"
 
