--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,7 @@ identi = 'i';
 
 dbclassprefix = "DB";
 db_max_results = 100
-base_url = "http://apps.k2c.se/misc/crm_message_pattern/"
+base_url = "http://marcus.ax.lt/"
 base_dir = __DIR__
 plugin_dir = "plugins"
 logdir = "logs"
@@ -21,10 +21,10 @@ stdout = "stdout.log"
 ; ; ; ; ; ; ; ; ; ; ;
 ; AUTH settings
 
-DB 		= "crm";
-DB_HOST = "k2csql01";
-DB_USER = "sa";
-DB_PASS = "L3ftH4nd";
+DB 	= "crm";
+DB_HOST = "localhost";
+DB_USER = "marcus";
+DB_PASS = "localhost";
 DB_PORT = "none";
 
 ; ; ; ; ; ; ; ; ; ; ;
@@ -52,7 +52,4 @@ plugins[] = index
 
 ; ; ; ; ; ; ; ; ; ; ;
 ; Debug
-plugins[] = sql_test
-plugins[] = test
-plugins[] = dep_test0
-plugins[] = dep_test1
+plugins[] = debug
